# caf_frameworks_native

./: Makefile.am  configure.ac
cmds/atrace/: atrace.cpp
cmds/dumpstate/: Android.mk  dumpstate.cpp  utils.c
cmds/installd/: Android.mk  commands.c  commands.cpp  installd.c  installd.cpp
cmds/servicemanager/: Android.mk  Makefile.am  service_manager.c
cmds/surfaceflinger/: main_surfaceflinger.cpp
data/etc/: android.hardware.camera.flash-autofocus.xml  handheld_core_hardware.xml
include/: Makefile.am
include/batteryservice/: BatteryService.h
include/gui/: BufferQueue.h  GLConsumer.h  IGraphicBufferConsumer.h  IGraphicBufferProducer.h  ISurfaceComposer.h  ISurfaceTexture.h  StreamSplitter.h  Surface.h  SurfaceComposerClient.h  SurfaceTexture.h  SurfaceTextureClient.h
include/input/: DisplayViewport.h  Input.h  InputTransport.h
include/ui/: FramebufferNativeWindow.h  GraphicBuffer.h  GraphicBufferAllocator.h  GraphicBufferMapper.h  PixelFormat.h  Rect.h
libs/binder/: Android.bp  IPCThreadState.cpp  IServiceManager.cpp  Makefile.am  Parcel.cpp  ProcessState.cpp
libs/gui/: Android.mk  BufferQueue.cpp  BufferQueueConsumer.cpp  BufferQueueCore.cpp  BufferQueueProducer.cpp  FrameTimestamps.cpp  GLConsumer.cpp  IGraphicBufferAlloc.cpp  IGraphicBufferConsumer.cpp  IGraphicBufferProducer.cpp  ISurfaceTexture.cpp  LayerState.cpp  StreamSplitter.cpp  Surface.cpp  SurfaceComposerClient.cpp  SurfaceTexture.cpp  SurfaceTextureClient.cpp
libs/hwc2on1adapter/: HWC2On1Adapter.cpp
libs/input/: InputTransport.cpp
libs/ui/: Android.mk  Fence.cpp  Gralloc2.cpp  (+8 more)
(+54 files in other folders)
